# CMakeTemplate

./: CMakeLists.txt  README.md
TaskModule/: CMakeLists.txt
TaskModule/Module1/: CMakeLists.txt
TaskModule/Module1/include/: consumer.hpp  databuffer.hpp  producer.hpp  unit.hpp
TaskModule/Module1/src/: consumer.cpp  databuffer.cpp  producer.cpp  unit.cpp
TaskModule/TestMoudle/: CMakeLists.txt
config/: config.hpp  config.hpp.in
src/: main.cpp
