CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(TranTask)

IF (CMAKE_SYSTEM_NAME MATCHES "Linux")
    MESSAGE(STATUS "current platform: Linux ")
    SET(MAKE_DEFINE "FBASE_MAKE")
    SET(OS "OS_LINUX")
ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Windows")
    MESSAGE(STATUS "current platform: Windows")
    SET(MAKE_DEFINE "WINDOWS")
    SET(OS "OS_WINDOWS")
ENDIF (CMAKE_SYSTEM_NAME MATCHES "Linux")

SET(CMAKE_BUILD_TYPE Debug)

#预定义宏
MESSAGE(STATUS "MAKE_DEFINE: ${MAKE_DEFINE}")
add_definitions(-D${MAKE_DEFINE} -D${OS})

#库路径
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)

#添加子任务模块
ADD_SUBDIRECTORY(TaskModule)

